@@ -1,16 +1,0 @@
-Gem::Specification.new do |s|
-  s.name = "mathn"
-  s.version = '0.0.1'
-  s.date = '2017-03-20'
-  s.summary = "Deprecated library that extends math operations."
-  s.description = "Deprecated library that extends math operations."
-
-  s.require_path = %w{lib}
-  s.files = %w{mathn.rb}
-  s.required_ruby_version = ">= 2.5.0dev"
-
-  s.authors = ["Keiju ISHITSUKA"]
-  s.email = [nil]
-  s.homepage = "https://www.ruby-lang.org"
-  s.license = "BSD-2-Clause"
-end
