@@ -2859,10 +2859,6 @@ class TestArray < Test::Unit::TestCase
 
     assert_raise(TypeError) {[0].sum("")}
     assert_raise(TypeError) {[1].sum("")}
-
-    assert_separately(%w[-rmathn], <<-EOS, ignore_stderr: true)
-      assert_equal(6, [1r, 2, 3r].sum)
-    EOS
   end
 
   private
